refactor: Corrigiendo Generación de respuesta de la API en APIResponser
